REGRESSION: ASSERTION FAILED: repaintRects() in WebCore::RenderLayer::recursiveUpdateLayerPositions. https://bugs.webkit.org/show_bug.cgi?id=281041 <rdar://137722495>

Reviewed by Simon Fraser.

The presence of repaintRects now depends on isVisibilityHiddenOrOpacityZero(),
not just hasVisibleContent.  Make sure we invalidate layer positions for opacity
changes, and change the logging to be the value that we care about.

Also switches the layer assertions to preferentially use debug asserts, so that
they are in use more often.

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
(WebCore::outputLayerPositionTreeLegend):
(WebCore::outputLayerPositionTreeRecursive):

Canonical link: https://commits.webkit.org/285155@main